
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef TYPE_1__* jpeg_saved_marker_ptr ;
struct TYPE_3__ {scalar_t__ marker; int data_length; scalar_t__ data; } ;


 float INT_MAX ;
 scalar_t__ JPEG_APP0 ;
 float read_value (unsigned char const*,int,int) ;

__attribute__((used)) static int extract_exif_resolution(jpeg_saved_marker_ptr marker, int *xres, int *yres)
{
 int is_big_endian;
 const unsigned char *data;
 unsigned int offset, ifd_len, res_type = 0;
 float x_res = 0, y_res = 0;

 if (!marker || marker->marker != JPEG_APP0 + 1 || marker->data_length < 14)
  return 0;
 data = (const unsigned char *)marker->data;
 if (read_value(data, 4, 1) != 0x45786966 || read_value(data + 4, 2, 1) != 0x0000)
  return 0;
 if (read_value(data + 6, 4, 1) == 0x49492A00)
  is_big_endian = 0;
 else if (read_value(data + 6, 4, 1) == 0x4D4D002A)
  is_big_endian = 1;
 else
  return 0;

 offset = read_value(data + 10, 4, is_big_endian) + 6;
 if (offset < 14 || offset > marker->data_length - 2)
  return 0;
 ifd_len = read_value(data + offset, 2, is_big_endian);
 for (offset += 2; ifd_len > 0 && offset + 12 < marker->data_length; ifd_len--, offset += 12)
 {
  int tag = read_value(data + offset, 2, is_big_endian);
  int type = read_value(data + offset + 2, 2, is_big_endian);
  int count = read_value(data + offset + 4, 4, is_big_endian);
  unsigned int value_off = read_value(data + offset + 8, 4, is_big_endian) + 6;
  switch (tag)
  {
  case 0x11A:
   if (type == 5 && value_off > offset && value_off <= marker->data_length - 8)
    x_res = 1.0f * read_value(data + value_off, 4, is_big_endian) / read_value(data + value_off + 4, 4, is_big_endian);
   break;
  case 0x11B:
   if (type == 5 && value_off > offset && value_off <= marker->data_length - 8)
    y_res = 1.0f * read_value(data + value_off, 4, is_big_endian) / read_value(data + value_off + 4, 4, is_big_endian);
   break;
  case 0x128:
   if (type == 3 && count == 1)
    res_type = read_value(data + offset + 8, 2, is_big_endian);
   break;
  }
 }

 if (x_res <= 0 || x_res > INT_MAX || y_res <= 0 || y_res > INT_MAX)
  return 0;
 if (res_type == 2)
 {
  *xres = (int)x_res;
  *yres = (int)y_res;
 }
 else if (res_type == 3)
 {
  *xres = (int)(x_res * 254 / 100);
  *yres = (int)(y_res * 254 / 100);
 }
 else
 {
  *xres = 0;
  *yres = 0;
 }
 return 1;
}
